test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/descending-patchJson6902/trigger-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trigger-pod
  namespace: default
spec:
  containers:
  - name: container1
    image: busybox:latest
