test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/descending-patchJson6902/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: descending-jsonpatch
