test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/descending-patchJson6902/target-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: target-pod
  namespace: default
