test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/descending-patchJson6902/trigger-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trigger-pod
  namespace: default
