test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/descending-patchJson6902/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: descending-patchjson
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: descending-jsonpatch
  - name: step-02
    try:
    - apply:
        file: target-pod.yaml
  - name: step-02-assert
    try:
    - assert:
        file: target-pod-assert.yaml
  - name: step-03
    try:
    - apply:
        file: trigger-pod.yaml
  - name: step-03-assert
    try:
    - assert:
        file: trigger-pod-assert.yaml
  - name: step-04
    try:
    - assert:
        file: target-pod-updated.yaml
